tests/fixtures/errors/unknown_identifier.lazy
x = 10
y = unknownVar + x
y
